# SkyTrace

./: .env.example  .gitignore  README.md  first-to-finish.md  pyproject.toml  requirements.txt
src/skytrace/: __main__.py  config.py
src/skytrace/agents/: orchestrator.py  telemetry_agent.py  user_notification_agent.py
src/skytrace/mcp_server/: __init__.py  main.py  server.py
src/skytrace/models/: __init__.py
src/skytrace/utils/: __init__.py  geocoding.py  rate_limiter.py  security.py
tests/: __init__.py  test_architecture.py  test_mcp_integration.py  test_rate_limiter.py
